# station0

./: CMakeLists.txt
doc/: notes.txt
inc/: battery.h  display.h  display_text.h  i2s.h  main.h  main_timer.h  mic.h  tcp_client.h  wifi.h
main/: CMakeLists.txt  main.c  station_example_main.c
scripts/: client.py  server.py  serwer.py  set_dirs.ps1
src/: battery.c  display.c  display_text.c  i2s.c  main_timer.c  mic.c  tcp_client.c  wifi.c
